welcome.lessons.welcome.methods.picture.PictureMono2.scala.code
override def run() {
	def faireMotif() {
		gauche(); avance(); droite(); avance(); faireV(); faireV(); 
	}
	faireMotif()
}
